# graphviz

./: configure.ac
plugin/: CMakeLists.txt  Makefile.am
plugin/kitty/: CMakeLists.txt  Makefile.am  gvdevice_kitty.c  gvplugin_kitty.c
